--- a/index.html
+++ b/index.html
@@ -1,70 +1,62 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="hu">
 <head>
   <title>Beiskolázás</title>
-  <meta charset="">
-
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="felveteli.css">
+ 
 </head>
 <body>
-
-
-<div>
-    <div></div>
+  <div class="bg-fej"></div>
+<div class="container">
+ 
+  <!-- Első oszlop -->
+  <div class="section">
+ 
+    <h3>Központi felvételi tájékoztató</h3>
+    <p>A középiskolákba történő jelentkezés során az iskolák határozzák meg, hogy a felvételi rangsort mi alapján döntik el. A Jószakma Szakgimnázium a felvételi során az általános iskolából hozott és a központi felvételin szerzett pontok alapján rangsorolja az iskolába jelentkezőket.</p>
+    <div><img src="logo.png" alt="logo"></div>
+    <a href="https://www.oktatas.hu/kozneveles/kozepfoku_felveteli_eljaras/kozepfoku_felveteli_eljaras_informacioi" target="_blank">OKTATÁS.HU</a>
+  </div>
+ 
+  <!-- Második oszlop -->
+  <div class="masikoszlop">
+    <h1>Tájékoztatás</h1>
+    <p>A központi felvételit magyar nyelv és irodalom, illetve matematika tantárgyakból írják a jelentkezők. Mindkét tárgy esetén legfeljebb 50 pont szerezhető. A felvételiző hozott pontjait az általános iskolai év végi eredményei alapján számolják, ez a pontszám legfeljebb 50 pont lehet. A hozott pontokat duplázzák. A központi felvételin szerzett és a hozott pontok összege adja a felvételiző összesített pontszámát.</p>
+    <div><img src="e-mail-marketing-2745489__340.jpg" alt="e-mail-marketing-2745489__340"></div>
+   
+  </div>
+ 
+  <!-- Harmadik oszlop -->
+  <div class="section">
+    <h3>Az oldal használatáról</h3>
+    <h6>Ön az oldal használatával a következő információkhoz juthat hozzá</h6>
+    <ul>
+      <li>Előzetes rangsor:</li>
+      <ol>
+        <li>Nevek</li>
+        <li>Ágazat</li>
+        <li>Összes pontszám</li>
+      </ol>
+      <li>Előzetes rangsor nyelvi előkészítő</li>
+      <li>A felvettek névsora</li>
+    </ul>
+  </div>
 </div>
-<div>
-      <div>
-            <div>
-              <h3>Központi felvételi tájékoztató</h3>
-                A középiskolákba történő jelentkezés során az iskolák határozzák meg, hogy a felvételi rangsort mi alapján döntik el. A Jószakma Szakgimnázium a felvételi során az általános iskolából hozott és a központi felvételin szerzett pontok alapján rangsorolja az iskolába jelentkezőket. </p></a>
-            </div>
-            <div>
-                <h1>Tájékoztatás</h1>
-                <h3>Jószakma Szakgimnázium </h3>
-              <p><p></p>
-
-            </div>
-            <div>
-              <h3>Az oldal használatáról</h3>
-                <h6>Ön az oldal használatával a következő információkhoz juthat hozzá</h6>
-                <ul>
-                    <li>Előzetes rangsor: </li>
-                      <ol>
-                          <li>Nevek</li>
-                          <li>Ágazat</li>
-                          <li>Összes pontszám</li>
-                      </ol>
-                    <li>Előzetes rangsor nyelvi előkészítő</li>
-                    <li>A felvettek névsora</li>
-                </ul>
-            </div>
-      </div>
+ 
+<div class="container">
+ 
+  <div >
+    <h3>A felvételt nyert tanulók névsora a nyelvi előkészítőre</h3>
+   
+        <tr>
+          <th scope="col">Tanuló neve</th>
+          <th scope="col">Ágazat</th>
+          <th scope="col">Összes pontszám</th>
+        </tr>
+     
+  </div>
 </div>
-
-
-<div>
-<div>
-    <div>
-        <h3>A felvételt nyert tanulók névsora a nyelvi előkészítőre</h3>
-        <div>
-
-        </div>
-    </div>
-<table>
-    <thead>
-    <th scope="col ">Előzetes névsor:</th>
-    <tr>
-        <th scope="col">Tanuló neve</th>
-        <th scope="col">Ágazat</th>
-        <th scope="col">Összes pontszám</th>
-    </tr>
-    </thead>
-    <tbody>
-
-</table>
-</div>
-</div>
-
+ 
 </body>
 </html>
-
